# BacterialColonyCounter

./: .bumpversion.cfg  .gitignore  README.md  __init__.py  blob_detector_tuning.py  colony_detection.py  color_tracking.py  counting.py  dish_detection.py  inputs.py  main.py  preprocessing.py  preprocessing_stills.py  preprocessing_timelapse.py  pyproject.toml  read_pdf.py  timelapse.py  tuning.py
colony_detection/: counting.py
helpers/: inputs.py  timelapse.py
image_manipulation/: dish_detection.py  preprocessing.py
main/: main.py
phase/: __init__.py
phase/colony_detection/: counting.py
phase/helpers/: inputs.py  timelapse.py
phase/image_manipulation/: dish_detection.py  preprocessing.py
phase/main/: main.py
src/bacterialcolonycounter/: __init__.py
src/bacterialcolonycounter/colony_detection/: counting.py
src/helpers/: plotting.py  timelapse.py
tests/: test_main.py  test_watershed.py
