[build-system]
requires = ["setuptools>=80.9.0", "setuptools_scm>=9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bacterialcolonycounter"
version = "0.0.0"  # setuptools_scm will override
authors = [
    { name = "Jakub Niklas", email = "jakubniklas03@gmail.com" }
]
description = "Automatic bacterial colony counting tool"
readme = "README.md"
# license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    # e.g., "numpy", "opencv-python"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/bacterialcolonycounter/_version.py"
