[build-system]
requires = ["setuptools>=80.9.0", "setuptools_scm>=9.2.2"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "bacterialcolonycounter"
authors = [
    { name = "Jakub Niklas", email = "jakubniklas03@gmail.com" }
]
description = "Automatic bacterial colony counting tool"
readme = "README.md"
# license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "numpy", "opencv-python", "matplotlib", "pypdf", "datetime"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/bacterialcolonycounter/_version.py"
version_scheme = "no-guess"
local_scheme = "no-local-version"
